@startuml

title __SRC's Class Diagram__\n

  package  {
    class Datas {
    }
  }
  

  package  {
    class Nodes {
    }
  }
  

  package  {
    abstract class Tree {
    }
  }
  

  package  {
    class TwoThree {
    }
  }
  

  package  {
    class myQueue {
    }
  }
  

  Datas o-- Datas : next
  Nodes o-- Nodes : parent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
